// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/clients/list/ClientList renders without crashing 1`] = `
<ClientList
  clientService={[MockFunction]}
  clientsArray={
    Array [
      Object {
        "firstName": "Khumpai",
        "gender": "",
        "id": "9b67a82d-dac7-40c0-85aa-e5976339a6b6",
        "lastContactDate": "",
        "lastName": "Family",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "Pramoj",
        "gender": "",
        "id": "a30116d5-0612-419e-9b93-00c87df4ffbb",
        "lastContactDate": "",
        "lastName": "Khumpai",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "Sepsook",
        "gender": "Male",
        "id": "b23307c2-cbbb-481f-9cd7-f218564cc4bc",
        "lastContactDate": "",
        "lastName": "Family",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "Udom",
        "gender": "",
        "id": "e5929901-9377-413c-850c-e41b48b34d5f",
        "lastContactDate": "",
        "lastName": "Sepsook",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "Imalda",
        "gender": "Female",
        "id": "faa436bb-0aa5-4c5f-a2fe-be687e164205",
        "lastContactDate": "",
        "lastName": "DANE",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "DANE",
        "gender": "Male",
        "id": "0a5457f9-3e2e-4432-afae-75b57251651a",
        "lastContactDate": "",
        "lastName": "Family",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
      Object {
        "firstName": "Peter",
        "gender": "",
        "id": "6dab682a-0f31-4935-9114-c4d33d148617",
        "lastContactDate": "",
        "lastName": "DANE",
        "location": "",
        "middleName": "",
        "type": "Client",
      },
    ]
  }
  fetchClientsActionCreator={[MockFunction]}
  location={[MockFunction]}
  match={[MockFunction]}
>
  <div>
    <table
      className="table table-shadow"
    >
      <tbody>
        <tr>
          <th>
            Identifier
          </th>
          <th>
            First Name
          </th>
          <th>
            Middle Name
          </th>
          <th>
            Last Name
          </th>
          <th>
            Gender
          </th>
          <th>
            Location
          </th>
          <th>
            <form>
              <select
                className="form-control col-auto custom-select"
              >
                <option>
                  Last contact
                </option>
                <option>
                  other Date
                </option>
              </select>
            </form>
          </th>
          <th>
            actions
          </th>
        </tr>
        <tr
          key="9b67a82d-dac7-40c0-85aa-e5976339a6b6"
        >
          <td>
            9b67a82d-dac7-40c0-85aa-e5976339a6b6
          </td>
          <td>
            Khumpai
          </td>
          <td />
          <td>
            Family
          </td>
          <td />
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="a30116d5-0612-419e-9b93-00c87df4ffbb"
        >
          <td>
            a30116d5-0612-419e-9b93-00c87df4ffbb
          </td>
          <td>
            Pramoj
          </td>
          <td />
          <td>
            Khumpai
          </td>
          <td />
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="b23307c2-cbbb-481f-9cd7-f218564cc4bc"
        >
          <td>
            b23307c2-cbbb-481f-9cd7-f218564cc4bc
          </td>
          <td>
            Sepsook
          </td>
          <td />
          <td>
            Family
          </td>
          <td>
            Male
          </td>
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="e5929901-9377-413c-850c-e41b48b34d5f"
        >
          <td>
            e5929901-9377-413c-850c-e41b48b34d5f
          </td>
          <td>
            Udom
          </td>
          <td />
          <td>
            Sepsook
          </td>
          <td />
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="faa436bb-0aa5-4c5f-a2fe-be687e164205"
        >
          <td>
            faa436bb-0aa5-4c5f-a2fe-be687e164205
          </td>
          <td>
            Imalda
          </td>
          <td />
          <td>
            DANE
          </td>
          <td>
            Female
          </td>
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="0a5457f9-3e2e-4432-afae-75b57251651a"
        >
          <td>
            0a5457f9-3e2e-4432-afae-75b57251651a
          </td>
          <td>
            DANE
          </td>
          <td />
          <td>
            Family
          </td>
          <td>
            Male
          </td>
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
        <tr
          key="6dab682a-0f31-4935-9114-c4d33d148617"
        >
          <td>
            6dab682a-0f31-4935-9114-c4d33d148617
          </td>
          <td>
            Peter
          </td>
          <td />
          <td>
            DANE
          </td>
          <td />
          <td />
          <td />
          <td>
            <a
              href="#"
            >
               view 
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ClientList>
`;

exports[`containers/clients/list/ClientList works correctly with the redux store 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(ClientList)
    clientService={[MockFunction]}
    fetchClientsActionCreator={[MockFunction]}
    location={[MockFunction]}
    match={[MockFunction]}
  >
    <ClientList
      clientService={[MockFunction]}
      clientsArray={
        Array [
          Object {
            "firstName": "Khumpai",
            "gender": "",
            "id": "9b67a82d-dac7-40c0-85aa-e5976339a6b6",
            "lastContactDate": "",
            "lastName": "Family",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "Pramoj",
            "gender": "",
            "id": "a30116d5-0612-419e-9b93-00c87df4ffbb",
            "lastContactDate": "",
            "lastName": "Khumpai",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "Sepsook",
            "gender": "Male",
            "id": "b23307c2-cbbb-481f-9cd7-f218564cc4bc",
            "lastContactDate": "",
            "lastName": "Family",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "Udom",
            "gender": "",
            "id": "e5929901-9377-413c-850c-e41b48b34d5f",
            "lastContactDate": "",
            "lastName": "Sepsook",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "Imalda",
            "gender": "Female",
            "id": "faa436bb-0aa5-4c5f-a2fe-be687e164205",
            "lastContactDate": "",
            "lastName": "DANE",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "DANE",
            "gender": "Male",
            "id": "0a5457f9-3e2e-4432-afae-75b57251651a",
            "lastContactDate": "",
            "lastName": "Family",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
          Object {
            "firstName": "Peter",
            "gender": "",
            "id": "6dab682a-0f31-4935-9114-c4d33d148617",
            "lastContactDate": "",
            "lastName": "DANE",
            "location": "",
            "middleName": "",
            "type": "Client",
          },
        ]
      }
      fetchClientsActionCreator={[Function]}
      location={[MockFunction]}
      match={[MockFunction]}
    >
      <div>
        <table
          className="table table-shadow"
        >
          <tbody>
            <tr>
              <th>
                Identifier
              </th>
              <th>
                First Name
              </th>
              <th>
                Middle Name
              </th>
              <th>
                Last Name
              </th>
              <th>
                Gender
              </th>
              <th>
                Location
              </th>
              <th>
                <form>
                  <select
                    className="form-control col-auto custom-select"
                  >
                    <option>
                      Last contact
                    </option>
                    <option>
                      other Date
                    </option>
                  </select>
                </form>
              </th>
              <th>
                actions
              </th>
            </tr>
            <tr
              key="9b67a82d-dac7-40c0-85aa-e5976339a6b6"
            >
              <td>
                9b67a82d-dac7-40c0-85aa-e5976339a6b6
              </td>
              <td>
                Khumpai
              </td>
              <td />
              <td>
                Family
              </td>
              <td />
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="a30116d5-0612-419e-9b93-00c87df4ffbb"
            >
              <td>
                a30116d5-0612-419e-9b93-00c87df4ffbb
              </td>
              <td>
                Pramoj
              </td>
              <td />
              <td>
                Khumpai
              </td>
              <td />
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="b23307c2-cbbb-481f-9cd7-f218564cc4bc"
            >
              <td>
                b23307c2-cbbb-481f-9cd7-f218564cc4bc
              </td>
              <td>
                Sepsook
              </td>
              <td />
              <td>
                Family
              </td>
              <td>
                Male
              </td>
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="e5929901-9377-413c-850c-e41b48b34d5f"
            >
              <td>
                e5929901-9377-413c-850c-e41b48b34d5f
              </td>
              <td>
                Udom
              </td>
              <td />
              <td>
                Sepsook
              </td>
              <td />
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="faa436bb-0aa5-4c5f-a2fe-be687e164205"
            >
              <td>
                faa436bb-0aa5-4c5f-a2fe-be687e164205
              </td>
              <td>
                Imalda
              </td>
              <td />
              <td>
                DANE
              </td>
              <td>
                Female
              </td>
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="0a5457f9-3e2e-4432-afae-75b57251651a"
            >
              <td>
                0a5457f9-3e2e-4432-afae-75b57251651a
              </td>
              <td>
                DANE
              </td>
              <td />
              <td>
                Family
              </td>
              <td>
                Male
              </td>
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
            <tr
              key="6dab682a-0f31-4935-9114-c4d33d148617"
            >
              <td>
                6dab682a-0f31-4935-9114-c4d33d148617
              </td>
              <td>
                Peter
              </td>
              <td />
              <td>
                DANE
              </td>
              <td />
              <td />
              <td />
              <td>
                <a
                  href="#"
                >
                   view 
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </ClientList>
  </Connect(ClientList)>
  );
</Provider>
`;
